--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,8 +81,18 @@
   }
 
   .input:focus {
-    @apply ring-2 ring-primary/50 border-primary;
-    box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 0 0 3px rgba(212, 182, 121, 0.1);
+    @apply border-primary ring-1 ring-primary/50;
+    box-shadow: 0 0 0 1px rgba(212, 182, 121, 0.1);
+  }
+
+  /* Hide native spinners */
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  input[type="number"] {
+    -moz-appearance: textfield; 
   }
 
   /* Select styling */
